--- a/WebGL-port.vcxproj
+++ b/WebGL-port.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -59,7 +59,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
