Renamed the source file to reflect the fact that there will be future ones...

--- a/WebGL-port.vcxproj.filters
+++ b/WebGL-port.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="lesson01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
