--- a/WebGL-port.vcxproj
+++ b/WebGL-port.vcxproj
@@ -44,12 +44,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\OculusSDK\LibOVR\Src;C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glew32s.lib;glfw3.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\giles\Documents\Dev\glew-1.12.0\lib\Release\Win32;C:\Users\giles\Documents\Dev\glfw-3.1\src\Debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glew32s.lib;glfw3.lib;libovr.lib;Winmm.lib;ws2_32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\giles\Documents\Dev\OculusSDK\LibOVR\Lib\Win32\VS2013;C:\Users\giles\Documents\Dev\glew-1.12.0\lib\Release\Win32;C:\Users\giles\Documents\Dev\glfw-3.1\src\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -59,14 +59,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\giles\Documents\Dev\OculusSDK\LibOVR\Src;C:\Users\giles\Documents\Dev\glm;C:\Users\giles\Documents\Dev\glew-1.12.0\include;C:\Users\giles\Documents\Dev\glfw-3.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glew32s.lib;glfw3.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\giles\Documents\Dev\glew-1.12.0\lib\Release\Win32;C:\Users\giles\Documents\Dev\glfw-3.1\src\Debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glew32s.lib;glfw3.lib;libovr.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\giles\Documents\Dev\OculusSDK\LibOVR\Lib\Win32\VS2013;C:\Users\giles\Documents\Dev\glew-1.12.0\lib\Release\Win32;C:\Users\giles\Documents\Dev\glfw-3.1\src\Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
